# DonJplaning

./: AGENTS.md  Cargo.toml  build.rs
src/: application.rs  domain.rs  error.rs  infrastructure.rs  lib.rs  main.rs  ui.rs
ui/: app-window.slint
